--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
         </style>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning mt-1" style="position: fixed; width: 100%; z-index: 999999; padding: 10px;
-        border-radius: 30px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning mt-0" style="position: fixed; width: 100%; z-index: 999999; padding: 10px;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="https://pubgfont.com/">PUBGFONT.COM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -170,7 +169,7 @@
             </div>
         </nav>
         <br />
-        <h1 style="text-align: center; border-radius: 10px; font-size: 26px; background-color: #dee2e6; margin: 45px 5px 8px 5px; padding: 2px;">
+        <h1 style="text-align: center; border-radius: 10px; font-size: 26px; background-color: #dee2e6; margin: 42px 5px 8px 5px; padding: 2px;">
             <a href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">PUBG Name Generator</a>
         </h1>
         <!-- ADDED CUSTOME STYLISH NAME CODE  -->
