--- a/index.html
+++ b/index.html
@@ -322,9 +322,10 @@
             style="width: 100%; resize: none; position: fixed; bottom: 0; z-index: 99; background-color: #dee2e6; color: black;"
             required
             name="text"
-            placeholder="Enter Your Name & Scroll Down ↓"
+            placeholder="Enter Your Name..."
             value=""
         ></textarea>
+        <!-- & Scroll Down ↓ -->
         <!-- backdrop-filter: blur(20px); -->
         <br />
         <div id="result" style="margin: -25px 5px 0px 5px;"> 
