--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <!-- Font Awesome CSS Link -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
         <!-- Google AdSnese Tag -->
-        <meta name="google-adsense-account" content="ca-pub-5580564546196829">
+        <!-- <meta name="google-adsense-account" content="ca-pub-5580564546196829">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5580564546196829"
-     crossorigin="anonymous"></script>
+     crossorigin="anonymous"></script> -->
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-GGDCZGDZHH"></script>
         <script>
