--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,8 @@
                     <!--       Added Card -->
                     <h2>6. How to Generate a stylish name for PUBG?</h2>
                     <div class="card">
-                        <a href="https://pubgfont.com/"><img src="pubg-name-generator.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
+                        <!-- <a href="https://pubgfont.com/">
+                            <img src="pubg-name-generator.jpeg" class="card-img-bottom" alt="pubgfont" /></a> -->
                         <div class="card-body">
                             <p class="pspace">
                                 Creating a unique and stylish PUBG name with pubgfont is really easy. Just type your name in the name field below or paste your name there, and our PUBG name generator will give you lots of unique and stylish
@@ -1215,7 +1216,8 @@
                     </p>
                     <h2>8. How to rename or change your name in PUBG Mobile?</h2>
                     <div class="card">
-                        <a href="https://pubgfont.com/"><img src="how-to-change-name-pubg-mobile-guide.png" class="card-img-bottom" alt="how-to-change-name-pubg-mobile-guide" /></a>
+                        <!-- <a href="https://pubgfont.com/">
+                            <img src="how-to-change-name-pubg-mobile-guide.png" class="card-img-bottom" alt="how-to-change-name-pubg-mobile-guide" /></a> -->
                         <div class="card-body">
                             <p>Follow the mentioned steps below to rename or change your name in PUBG Mobile:</p>
                             <ol style="padding: 8px;">
