--- a/index.html
+++ b/index.html
@@ -1246,15 +1246,14 @@
                     <h3>Few words from the developer</h3>
                     <p class="pspace">
                         We hope you are using this tool in your daily life to generate unique and stylish names for your gaming and social media profiles. If you encounter any difficulties or issues while accessing or using this tool,
-                        please feel free to <a href="contact.html">contact us</a>. We will keep working on this tool to provide you high-quality content and the better user experience.
+                        please feel free to contact us. We will keep working on this tool to provide you high-quality content and the better user experience.
                     </p>
                     <p class="card-text"><small class="text-muted">Last updated a few minutes ago</small></p>
                     <hr />
                     <h3>You Might Also Like:</h3>
                     <ul style="padding: 10px; margin-bottom: 65px !important;">
-                        <li><a href="https://lovecalcu.com/">Lovecalcu - Calculate your love</a></li>
-                        <li><a href="https://agecalcu.com/">Agecalcu - Calculate your age in seconds</a></li>
-                        <li><a href="https://roas-formula.com/">ROAS Formula - Calculate ROAS</a></li>
+                        <li><a href="https://snapmp3.com/">Youtube Downloader - Youtube to MP3 Converter</a></li>
+                        <li><a href="https://lovecalcu.com/">Love Calculator - Calculate Your Love in Percentage</a></li>
                     </ul>
                     <script>
                         //  Add click event listener to symbols
