--- a/index.html
+++ b/index.html
@@ -1156,15 +1156,15 @@
 
                 <h2>4. Introducing the Pubg Name Generator - Create Cool and Unique PUBG Profiles</h2>
                 <p class="pspace">
-                    If you are struggling to choose a unique and stylish name for your PUBG profile, we have developed a helpful tool for you called the <a href="https://pubgfont.com">PUBG Name Generator</a>. This tool is quite popular and it helps players in making cool and special names for their PUBG profile by using cool symbols. Many PUBG players have used this tool to create creative and stylish nicknames.
+                    If you are struggling to choose a unique and stylish name for your PUBG profile, we have developed a helpful <a href="https://pubgfont.com">PUBG Name Generator</a> tool for you. This tool is popular and it helps players in making cool and special names for their PUBG profile by using cool symbols. Many PUBG players have used this tool to create creative and stylish nicknames for their gaming profiles.
                 </p>
                 <p class="pspace">
                     If you want to join pro gaming groups, picking the right name can be tough. Using a name like 'KINGjohn' might not be the best in competitive tournaments. Why risk your gaming reputation when you can choose from a list of PUBG names below? If you want to personalize your in-game character, our Pubg Name Generator has new, awesome names that haven't become famous yet. Feel free to use our platform and get help from our resources.
                 </p>
 
-                <h2>5. Why Choose <a href="https://pubgfont.com/">Pubgfont.com</a> for Creating a Stylish PUBG Name with Stylish Fonts and Symbols</h2>
+                <h2>5. Why Choose Pubgfont.com for Creating a Stylish PUBG Name with Stylish Fonts and Symbols</h2>
                 <p class="pspace">
-                    <a href="https://pubgfont.com/">Pubgfont.com</a> is a best tool to create stylish names for PUBG because it offers a wide range of pre-generated stylish name fonts and symbols. With this tool, you can
+                    Pubgfont.com is a best tool to create stylish names for PUBG because it offers a wide range of pre-generated stylish name fonts and symbols. With this tool, you can
                     create your unique name using a variety of text styles and symbols. These stylish symbols are essential if you want to enhance the attractiveness and style of your social media and gaming profiles.
                 </p>
 
@@ -1221,18 +1221,17 @@
                         <div class="card-body">
                             <p>Follow the mentioned steps below to rename or change your name in PUBG Mobile:</p>
                             <ol style="padding: 8px;">
-                                <li>Open <b>'PUBG Mobile'</b> on your device.</li>
-                                <li>At the bottom right side, you will see an <b>'Inventory Option'</b>then click on it.</li>
-                                <li>Click on the <b>'Crate Icon'</b> at the bottom, and you will see a Rename Card.</li>
-                                <li>Click on the <b>'Rename Card'</b> to rename or change your name.</li>
-                                <li>Once you have renamed or changed your name, click <b>'OK'</b> to save changes.</li>
+                                <li>Open <b>PUBG Mobile</b> on your device.</li>
+                                <li>At the bottom right side, you will see an <b>Inventory Option</b>then click on it.</li>
+                                <li>Click on the <b>Crate Icon</b> at the bottom, and you will see a Rename Card.</li>
+                                <li>Click on the <b>Rename Card</b> to rename or change your name.</li>
+                                <li>Once you have renamed or changed your name, click <b>OK</b> to save changes.</li>
                             </ol>
                         </div>
                     </div>
                     <h2>9. Can I use a stylish PUBG name on social media apps?</h2>
                     <p class="pspace">
-                        Yes, The stylish name you create with this tool are also compatible for social media apps like Facebook, Instagram, TikTok and other social media apps. With
-                        <a href="https://pubgfont.com/">pubgfont.com</a>, you can create a special and attractive username for all of your social media profiles. It is a popular tool for generating stylish name especially for PUBG. It has
+                        Yes, The stylish name you create with this tool are also compatible for social media apps like Facebook, Instagram, TikTok and other social media apps. With pubgfont.com, you can create a special and attractive username for all of your social media profiles. It is a popular tool for generating stylish name especially for PUBG. It has
                         lots of font styles for both social media and gaming. Many people have used this tool to create stylish profiles by mixing different fonts and symbols.
                     </p>
                     <h2>10. Importance of stylish PUBG name in PUBG Game</h2>
