--- a/index.html
+++ b/index.html
@@ -920,9 +920,9 @@
                 <h2 class="text-center">1. How to use the PUBG Name Generator with a simple copy and paste?</h2>
                 <p>Follow the easy steps below to create a stylish PUBG name with your favorite stylish symbols using this PUBG Name Generator with a simple copy and paste.</p>
                 <ol style="padding: 10px;">
-                    <li>Enter your name in the 'Input Name Field' below.</li>
-                    <li>Click on your favorite 'Stylish Symbol' provided in the table below to copy it.</li>
-                    <li>Click the 'Copy' button to copy your stylish PUBG name.</li>
+                    <li>Enter your name in the input name field below.</li>
+                    <li>Click on your favorite stylish symbol provided in the table below to copy it.</li>
+                    <li>Click the copy button to copy your stylish PUBG name.</li>
                 </ol>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control text-89" placeholder="Create stylish name here..." style="height: 40px;" id="copy_preview" />
