--- a/index.html
+++ b/index.html
@@ -917,8 +917,8 @@
         <!--        Added FAQ's  -->
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h2 class="text-center">1. How to use the PUBG Name Generator with a simple copy and paste?</h2>
-                <p>Follow the easy steps below to create a stylish PUBG name with your favorite stylish symbols using this PUBG Name Generator with a simple copy and paste.</p>
+                <h2 class="text-center">How to use the PUBG Name Generator with a simple copy and paste?</h2>
+                <p>Follow the easy steps below to create a stylish PUBG name with your favorite stylish symbols using our latest PUBG name generator easily with a simple copy and paste.</p>
                 <ol style="padding: 10px;">
                     <li>Enter your name in the input name field below.</li>
                     <li>Click on your favorite stylish symbol provided in the table below to copy it.</li>
@@ -1127,47 +1127,44 @@
                 </div>
                 <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p> -->
 
-                <h2>2. Supported Games and Social Media Platforms</h2>
-                <div class="social-icons text-center">
+                <!-- <h2>2. Supported Games and Social Media Platforms</h2>
+                <div class="social-icons text-center"> -->
 
         <!-- Supported Games Section -->
        
-             <i class="icon fas fa-gamepad"></i>
+             <!-- <i class="icon fas fa-gamepad"></i>
                 <h3>PUBG</h3>
                 <i class="icon fas fa-fire"></i>
                 <h3>Free Fire</h3>
                 <i class="icon fas fa-fighter-jet"></i>
-                <h3>Call of Duty</h3>
+                <h3>Call of Duty</h3> -->
             <!-- Add more games here -->
 
         <!-- Social Media Platforms Section -->
-                <i class="icon fab fa-tiktok"></i>
+                <!-- <i class="icon fab fa-tiktok"></i>
                 <h3>TikTok</h3>
                 <i class="icon fab fa-facebook"></i>
                 <h3>Facebook</h3>
                 <i class="icon fab fa-instagram"></i>
-                <h3>Instagram</h3>
+                <h3>Instagram</h3> -->
             <!-- Add more social media platforms here -->
-        </div>
-                <h2>3. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
+        <!-- </div> -->
+                <h2>History of PlayerUnknown's Battlegrounds (PUBG)</h2>
                 <p class="pspace">
                     You might have heard about highly addictive multiplayer battle royale game within the gaming industry. PlayerUnknown's Battlegrounds (PUBG) has broken many records that were previously unchallenged. This game was developed by an Irishman named Brendan Greene, who served as both the developer and designer.
                 </p>
 
-                <h2>4. Introducing the Pubg Name Generator - Create Cool and Unique PUBG Profiles</h2>
+                <h2>Introducing the Latest and Updated PUBG Name Generator</h2>
                 <p class="pspace">
-                    If you are struggling to choose a unique and stylish name for your PUBG profile, we have developed a helpful <a href="https://pubgfont.com">PUBG Name Generator</a> tool for you. This tool is popular and it helps players in making cool and special names for their PUBG profile by using cool symbols. Many PUBG players have used this tool to create creative and stylish nicknames for their gaming profiles.
+                    If you are struggling to choose a unique and stylish name for your PUBG profile, we have developed a helpful <a href="https://pubgfont.com">PUBG Name Generator</a> tool for you. This tool is popular and it helps players make cool and special names for their PUBG profiles by using cool symbols. Many PUBG players have used this tool to create creative and stylish nicknames for their gaming profiles.
                 </p>
                 <p class="pspace">
-                    If you want to join pro gaming groups, picking the right name can be tough. Using a name like 'KINGjohn' might not be the best in competitive tournaments. Why risk your gaming reputation when you can choose from a list of PUBG names below? If you want to personalize your in-game character, our Pubg Name Generator has new, awesome names that haven't become famous yet. Feel free to use our platform and get help from our resources.
+                    If you want to join pro gaming groups, picking the right name can be tough. Using a name like 'KINGjohn' might not be the best in competitive tournaments. Why risk your gaming reputation when you can choose from a list of PUBG names below? If you want to personalize your in-game character, our PUBG Name Generator has new, awesome names that haven't become famous yet. Feel free to use our platform and get help from our resources.
                 </p>
-
-                <h2>5. Why Choose Pubgfont.com for Creating a Stylish PUBG Name with Stylish Fonts and Symbols</h2>
+                <h2>Why choose our PUBG name generator for creating a stylish PUBG name with stylish fonts and symbols</h2>
                 <p class="pspace">
-                    Pubgfont.com is a best tool to create stylish names for PUBG because it offers a wide range of pre-generated stylish name fonts and symbols. With this tool, you can
-                    create your unique name using a variety of text styles and symbols. These stylish symbols are essential if you want to enhance the attractiveness and style of your social media and gaming profiles.
+                    Our pubg name generator is the best tool to create stylish names for PUBG because it offers a wide range of pre-generated stylish name fonts and symbols. With this tool, you can create your unique name using a variety of text styles and symbols. These stylish symbols are essential if you want to enhance the attractiveness and style of your social media and gaming profiles.
                 </p>
-
                 <!-- <span class="badge badge-warning" style="color: #212529; background: #ffc107; padding: 4px; font-size: 20px;">#Keywords</span>
                 <div>
                     <ul style="padding: 10px;">
@@ -1186,7 +1183,7 @@
                         These symbols can be easily copied and pasted into the PUBG rename field.
                     </p> -->
                     <!--       Added Card -->
-                    <h2>6. How to Generate a stylish name for PUBG?</h2>
+                    <h2>How to Generate a stylish name for PUBG?</h2>
                     <div class="card">
                         <!-- <a href="https://pubgfont.com/">
                             <img src="pubg-name-generator.jpeg" class="card-img-bottom" alt="pubgfont" /></a> -->
@@ -1209,13 +1206,13 @@
                         </div>
                     </div>
                     <!--  Ended Card -->
-                    <h2>7. How to generate a stylish name for social media profiles?</h2>
+                    <h2>How to generate a stylish name for social media profiles?</h2>
                     <p class="pspace">
                         If you want a stylish name for your social media profile, just enter your name in the field below. This tool will give you different stylish name with emojis and symbols. Pick the font style you like, then click
                         'Copy' to get your stylish name with cool and unique text fonts.
                     </p>
                     <h2>8. How to rename or change your name in PUBG Mobile?</h2>
-                    <div class="card">
+                    <!-- <div class="card"> -->
                         <!-- <a href="https://pubgfont.com/">
                             <img src="how-to-change-name-pubg-mobile-guide.png" class="card-img-bottom" alt="how-to-change-name-pubg-mobile-guide" /></a> -->
                         <div class="card-body">
@@ -1228,26 +1225,20 @@
                                 <li>Once you have renamed or changed your name, click <b>OK</b> to save changes.</li>
                             </ol>
                         </div>
-                    </div>
-                    <h2>9. Can I use a stylish PUBG name on social media apps?</h2>
+                    <!-- </div> -->
+                    <h2>Can you use a stylish PUBG name on social media accounts?</h2>
                     <p class="pspace">
-                        Yes, The stylish name you create with this tool are also compatible for social media apps like Facebook, Instagram, TikTok and other social media apps. With pubgfont.com, you can create a special and attractive username for all of your social media profiles. It is a popular tool for generating stylish name especially for PUBG. It has
-                        lots of font styles for both social media and gaming. Many people have used this tool to create stylish profiles by mixing different fonts and symbols.
+                        Absolutely! The stylish names you create with this tool are perfect for various social media platforms like Facebook, Instagram, TikTok, and more. Our tool offers you the opportunity to create a special and attractive username for all your social media profiles. It is a popular tool known for generating stylish names, especially created for PUBG enthusiasts. The site boasts a wide array of font styles suitable for both social media and gaming purposes. Many users have used this tool to craft unique profiles by mixing different fonts and symbols.
                     </p>
-                    <h2>10. Importance of stylish PUBG name in PUBG Game</h2>
+                    <h2>Importance of a stylish PUBG name in the PUBG Game</h2>
                     <p class="pspace">
-                        PUBG has captured the hearts and minds of many, making it a wise choice to select a memorable and catchy name for your squad that evokes the era of PUBG whenever it comes to mind. You may have observed that some PUBG
-                        mobile players incorporate fancy symbols into their names. Names like Gangster, Black Legit, Ghost, Devil, Abhi, Bad Boy, Beast, Deadshot, and Eagle are just a few examples.
+                        A cool and attractive username can make you stand out in the game, much like Dynamo and Mortal. Having a memorable name not only helps others recognize you but also leaves a positive impression. While skill in the game is undoubtedly important, having a stylish and unique PUBG username adds an extra layer of flair and memorability.
                     </p>
+                    <h3>A Message from the Developer</h3>
                     <p class="pspace">
-                        A cool and attractie username can make other players notice you in a game, just like Dynamo and Mortal. Having a cool name in a game can make others remember you in a good way. Being good at a game is important, but your PUBG username should be stylish, unique and memorable.
+                        We hope you are using this tool in your daily life to generate unique and stylish names for your gaming and social media profiles. If you encounter any difficulties or issues while accessing or using this tool, please feel free to contact us. We will keep working on this tool to provide you with high-quality content and a better user experience.
                     </p>
-                    <h3>Few words from the developer</h3>
-                    <p class="pspace">
-                        We hope you are using this tool in your daily life to generate unique and stylish names for your gaming and social media profiles. If you encounter any difficulties or issues while accessing or using this tool,
-                        please feel free to contact us. We will keep working on this tool to provide you high-quality content and the better user experience.
-                    </p>
-                    <p class="card-text"><small class="text-muted">Last updated a few minutes ago</small></p>
+                    <!-- <p class="card-text"><small class="text-muted">Last updated a few minutes ago</small></p> -->
                     <hr />
                     <h3>You Might Also Like:</h3>
                     <ul style="padding: 10px; margin-bottom: 65px !important;">
