--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,7 @@
                     You might have heard about highly addictive multiplayer battle royale game within the gaming industry. PlayerUnknown's Battlegrounds (PUBG) has broken many records that were previously unchallenged. This game was developed by an Irishman named Brendan Greene, who served as both the developer and designer.
                 </p>
 
-                <h2>Introducing the Latest and Updated PUBG Name Generator</h2>
+                <h2>Introducing the latest and updated PUBG Name Generator</h2>
                 <p class="pspace">
                     If you are struggling to choose a unique and stylish name for your PUBG profile, we have developed a helpful <a href="https://pubgfont.com">PUBG Name Generator</a> tool for you. This tool is popular and it helps players make cool and special names for their PUBG profiles by using cool symbols. Many PUBG players have used this tool to create creative and stylish nicknames for their gaming profiles.
                 </p>
