--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
                     </p> -->
                     <!--       Added Card -->
                     <h2>How to Generate a stylish name for PUBG?</h2>
-                    <div class="card">
+                    <!-- <div class="card"> -->
                         <!-- <a href="https://pubgfont.com/">
                             <img src="pubg-name-generator.jpeg" class="card-img-bottom" alt="pubgfont" /></a> -->
                         <div class="card-body">
@@ -1204,7 +1204,7 @@
                             </ul>
                             <!--  <p class="card-text"><small class="text-muted">Some text here</small></p> -->
                         </div>
-                    </div>
+                    <!-- </div> -->
                     <!--  Ended Card -->
                     <h2>How to generate a stylish name for social media profiles?</h2>
                     <p class="pspace">
