--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" />
         <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" /> -->
         <link rel="stylesheet" href="style.css" />
-        <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet" />
+        <!-- <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet" /> -->
           <!-- Bootstrap CSS Link -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Font Awesome CSS Link -->
@@ -146,7 +146,7 @@
         </style>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning mt-0" style="position: fixed; width: 100%; z-index: 999999; padding: 10px;">
+        <nav class="navbar navbar-expand-lg mt-0" style="position: fixed; width: 100%; z-index: 999999; padding: 10px;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="https://pubgfont.com/">PUBGFONT.COM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -178,7 +178,7 @@
         </nav>
         <br />
         <h1 style="text-align: center; border-radius: 10px; font-size: 26px; background-color: #dee2e6; margin: 42px 5px 8px 5px; padding: 2px;">
-            <a href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">PUBG Name Generator</a>
+            <a href="https://pubgfont.com/">PUBG Name Generator</a>
         </h1>
         <!-- ADDED CUSTOME STYLISH NAME CODE  -->
         <!-- <div class="container">
