--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </style>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg mt-0" style="position: fixed; width: 100%; z-index: 999999; padding: 10px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning mt-0" style="position: fixed; width: 100%; z-index: 999999; padding: 10px;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="https://pubgfont.com/">PUBGFONT.COM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
